test/error/TypeRangeFloat.fu
public static class Test
{
	public static bool Run()
	{
		0 .. 10.5 i; //ERROR: Expected integer
		return true;
	}
}
